--- a/_pgbackup/casa2/marcas_1696448792.html
+++ b/_pgbackup/casa2/marcas_1696448792.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -40,8 +41,7 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span>
-                                        <span class="icons"><a>SPA</a> <a>ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Idiomas:</span><span class="icons"><a>SPA</a> <a>ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -97,10 +97,10 @@
                                         Cubren los perfiles organolépticos para todo tipo de consumidores de mezcal: iniciadores, aficionados y expertos. <br><br> Nuestra más reciente marca, Metchi®, es una sal de gusano artesanal premium, ideal para acompañar el mezcal, ya sea derecho con rodajas de naranja o en mixología.</p>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img>
                                         <div class="pos_logos">
-                                            <img href="#" class="logos" src="assets/img/logorecuerdo.png"></img>
-                                            <img href="#" class="logos" src="assets/img/logozignum.png"></img>
-                                            <img href="#" class="logos" src="assets/img/logosenorio.png"></img>
-                                            <img href="#" class="logos" src="assets/img/logometchi.png" width="209"></img>
+                                            <a href="marcas.html#recuerdo"> <img class="logos" src="assets/img/logorecuerdo.png" alt="Logo Recuerdo"> </a>
+                                            <a href="marcas.html#zignum"> <img class="logos" src="assets/img/logozignum.png" alt="Logo Zignum"> </a>
+                                            <a href="marcas.html#señorio"> <img class="logos" src="assets/img/logosenorio.png" alt="Logo Señorio"> </a>
+                                            <a href="marcas.html#metchi"> <img class="logos" src="assets/img/logometchi.png" width="209" alt="Logo Metchi"> </a>
                                         </div>                                         
                                     </div>
                                     <div class="section_brand" id="recuerdo">
@@ -108,12 +108,10 @@
                                             <div class="text_brand">
                                                 <img src="assets/img/logorecuerdo.png">
                                                 <p style="font-family: 'Montserrat', sans-serif; color: #ffffff; font-size: 2.7vh; line-height: 3vh; font-weight: 700; padding-top: 17px;">Directamente de la capital ancestral del mezcal, EL RECUERDO MEZCAL® es un producto memorable de nuestra tradición y nuestra cultura, en cada sentido de la palabra.</p>
-                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #ffffff;">EL RECUERDO MEZCAL® se ofrece con un gusano de agave, para quienes aprecian la textura sedosa que este aporta al líquido y disfrutan de la novedad de compartirlo con amigos. También está disponible sin gusano para aquellos que buscan notas ahumadas con una complejidad distinta.<br><br>Horneado sobre piedras de río con madera certificada, se respetan todas las técnicas tradicionales garantizando la preservación del medio ambiente.<br><br>EL RECUERDO MEZCAL® es el mezcal más vendido en las tiendas Duty Free México; es elegido por turistas internacionales en busca de regalos auténticos de México.</p>
-                                                <button>ir al sitio</button>
+                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #ffffff; line-height: 2vh;">EL RECUERDO MEZCAL® se ofrece con un gusano de agave, para quienes aprecian la textura sedosa que este aporta al líquido y disfrutan de la novedad de compartirlo con amigos. También está disponible sin gusano para aquellos que buscan notas ahumadas con una complejidad distinta.<br><br>Horneado sobre piedras de río con madera certificada, se respetan todas las técnicas tradicionales garantizando la preservación del medio ambiente.<br><br>EL RECUERDO MEZCAL® es el mezcal más vendido en las tiendas Duty Free México; es elegido por turistas internacionales en busca de regalos auténticos de México.</p><a class="button button2 button3" href="https://www.recuerdomezcal.com/es/" target="_blank">ir al sitio</a>
                                             </div>
                                             <div class="img_bottle">
-                                                <img src="assets/img/botellas_recuerdo.png">
-                                                <a class="up" id="scroll-top"></a> 
+                                                <img src="assets/img/botellas_recuerdo.png"> 
                                             </div>
                                         </div>
                                     </div>
@@ -123,12 +121,10 @@
                                                 <div class="text_brand">
                                                     <img src="assets/img/logo_zignum_mezcal.png">
                                                     <p style="font-family: 'Montserrat', sans-serif; color: #000000; font-size: 2.7vh; line-height: 3vh; font-weight: 700; padding-top: 17px;">ZIGNUM ®, significa “punta de lanza”, es reconocido como un Mezcal excepcionalmente suave y fino.</p>
-                                                    <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #000000;">El Maestro Mezcalero y su gente, lo elaboran con pasión y compromiso con el medio ambiente; del campo a la barrica y de la barrica a la botella. Las piñas del agave son cosechadas en su plenitud de maduración, para otorgar al destilado final un sabor auténtico. <br><br>ZIGNUM ® Reposado, Añejo y Cristalino son después envejecidos en barricas de roble, mismas que le dan mayor complejidad y carácter.<br><br>EL MEZCAL MÁS PREMIADO DEL MUNDO, complacerá a los clientes más exigentes, así como a aquellos que se empiezan a aventurar en el mundo del Mezcal.</p>
-                                                    <button>ir al sitio</button>
+                                                    <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #000000;">El Maestro Mezcalero y su gente, lo elaboran con pasión y compromiso con el medio ambiente; del campo a la barrica y de la barrica a la botella. Las piñas del agave son cosechadas en su plenitud de maduración, para otorgar al destilado final un sabor auténtico. <br><br>ZIGNUM ® Reposado, Añejo y Cristalino son después envejecidos en barricas de roble, mismas que le dan mayor complejidad y carácter.<br><br>EL MEZCAL MÁS PREMIADO DEL MUNDO, complacerá a los clientes más exigentes, así como a aquellos que se empiezan a aventurar en el mundo del Mezcal.</p><a class="button" href="https://www.zignummezcal.com/" target="_blank">ir al sitio</a>
                                                 </div>
                                                 <div class="img_bottle">
-                                                    <img src="assets/img/botellas_zignum.jpg">
-                                                    <a class="up" id="scroll-top"></a> 
+                                                    <img src="assets/img/botellas_zignum.jpg"> 
                                                 </div>
                                             </div>
                                         </div>
@@ -138,12 +134,10 @@
                                             <div class="text_brand">
                                                 <img src="assets/img/logo_senorio_mezcal.png" width="194">
                                                 <p style="font-family: 'Montserrat', sans-serif; color: #000000; font-size: 2.7vh; line-height: 3vh; font-weight: 700; padding-top: 17px;">SEÑORÍO MEZCAL® es la Armonia Perfecta de dos destilaciones</p>
-                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #000000;">SEÑORÍO MEZCAL® es un Mezcal de Ahumado Suave originario de Oaxaca, que adquiere esta particularidad gracias a la PERFECTA ARMONÍA DE DOS DESTILACIONES de distintas intensidades y perfiles de sabor-aroma. <br><br>EL BALANCE PERFECTO ENTRE LAS NOTAS SUAVES DE HUMO Y EL SABOR AUTÉNTICO DEL AGAVE ESPADÍN. SEÑORÍO MEZCAL® Reposado y Añejo son madurados en barricas de roble blanco americano, que les otorgan notas más intensas y complejas. <br><br>Celebramos e invitamos al descubrimiento, en Armonía Perfecta, del valor de los pequeños detalles y a aprender a disfrutar del “todo” de las cosas.</p>
-                                                <button>ir al sitio</button>
+                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #000000;">SEÑORÍO MEZCAL® es un Mezcal de Ahumado Suave originario de Oaxaca, que adquiere esta particularidad gracias a la PERFECTA ARMONÍA DE DOS DESTILACIONES de distintas intensidades y perfiles de sabor-aroma. <br><br>EL BALANCE PERFECTO ENTRE LAS NOTAS SUAVES DE HUMO Y EL SABOR AUTÉNTICO DEL AGAVE ESPADÍN. SEÑORÍO MEZCAL® Reposado y Añejo son madurados en barricas de roble blanco americano, que les otorgan notas más intensas y complejas. <br><br>Celebramos e invitamos al descubrimiento, en Armonía Perfecta, del valor de los pequeños detalles y a aprender a disfrutar del “todo” de las cosas.</p><a class="button" href="https://senoriomezcal.com/" target="_blank">ir al sitio</a>
                                             </div>
                                             <div class="img_bottle">
-                                                <img src="assets/img/botellas_senorio.jpg">
-                                                <a class="up" id="scroll-top"></a> 
+                                                <img src="assets/img/botellas_senorio.jpg"> 
                                             </div>
                                         </div>
                                     </div>
@@ -152,12 +146,10 @@
                                             <div class="text_brand">
                                                 <img src="assets/img/logometchi.png">
                                                 <p style="font-family: 'Montserrat', sans-serif; color: #ffffff; font-size: 2.7vh; line-height: 3vh; font-weight: 700; padding-top: 17px;">METCHI® da balance y complementa el ritual mezcalero</p>
-                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #ffffff;">Metchi® es la abreviaciónpara (metchikuil), una forma tradicional de nombrar al gusano rojo del maguey en zapoteco (lenguaje autóctono de la región oaxaqueña).  <br><br>Nuestra sal de gusano, es una mezcla ahumada y picosita con agradable presencia de sabores de la tierra. <br><br>Metchi® da balance y complementa el ritual mezcalero, es ideal para escarchar sus cócteles y un delicioso sazonador para platillos mexicanos e internacionales.</p>
-                                                <button>ir al sitio</button>
+                                                <p style="font-family: 'Montserrat', sans-serif; font-size: 2vh; color: #ffffff;">Metchi® es la abreviaciónpara (metchikuil), una forma tradicional de nombrar al gusano rojo del maguey en zapoteco (lenguaje autóctono de la región oaxaqueña).  <br><br>Nuestra sal de gusano, es una mezcla ahumada y picosita con agradable presencia de sabores de la tierra. <br><br>Metchi® da balance y complementa el ritual mezcalero, es ideal para escarchar sus cócteles y un delicioso sazonador para platillos mexicanos e internacionales.</p><a class="button" href="https://www.salmetchi.com/" target="_blank">ir al sitio</a>
                                             </div>
                                             <div class="img_bottle">
-                                                <img src="assets/img/Metchi.jpg">
-                                                <a class="up" id="scroll-top"></a> 
+                                                <img src="assets/img/Metchi.jpg"> 
                                             </div>
                                         </div>
                                     </div>
@@ -198,8 +190,7 @@
                     <div id="bottom-bar-inner" class="container"> 
                         <div class="bottom-bar-inner-wrap"> 
                             <div class="bottom-bar-content"> 
-                                <div id="copyright">
-                                    <span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright"><span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
                                 </div>                                 
                             </div>
                             <!-- /.bottom-bar-content -->                             
