--- a/casa2/contacto.html
+++ b/casa2/contacto.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -103,7 +104,7 @@
                                             </div>
                                             <!-- /.row -->
                                             <div class="row" style="padding-left: 62px;">
-                                                <div class="col-md-6">
+                                                <div class="col-md">
                                                     <div class="themesflat-headings style-2 clearfix">
                                                         <h2 class="heading">CONTACTANOS</h2>
                                                         <div class="sep has-width w80 accent-bg clearfix"></div>                                                         
