--- a/_pgbackup/casa2/contact_1696448962.html
+++ b/_pgbackup/casa2/contact_1696448962.html
@@ -12,9 +12,8 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
-        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
-        <link href="../../../../Casa%25252520Armando%25252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
+        <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <!-- Colors -->         
@@ -26,9 +25,8 @@
         <script src="javascript/html5shiv.js"></script>
         <script src="javascript/respond.min.js"></script>
     <![endif]-->         
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
     </head>     
-    <body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search"> 
+    <body class="header-fixed page no-sidebar header-style-2 topbar-style-1 menu-has-search"> 
         <div id="wrapper" class="animsition"> 
             <div id="page" class="clearfix"> 
                 <!-- Header Wrap -->                 
@@ -41,8 +39,7 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span>
-                                        <span class="icons"><a>SPA</a> <a>ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Languages:</span><span class="icons"><a href="index.html">SPA</a> <a class="current-menu-item" href="Ingles.html">ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -64,15 +61,15 @@
                                 <!-- /.mobile-button -->                                 
                                 <nav id="main-nav" class="main-nav"> 
                                     <ul id="menu-primary-menu" class="menu"> 
-                                        <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
+                                        <li class="menu-item menu-item-has-children "> <a class="translatable mayus" href="Ingles.html">Home</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children "> <a class="translatable mayus" href="about.html">About Us</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="brands.html">Our Brands</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="responsibility.html">Social Responsibility</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="contacto.html">CONTACTO</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a class="translatable mayus" href="contact.html">Contact</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -86,77 +83,87 @@
                     <!-- /#site-header -->                     
                 </div>
                 <!-- #site-header-wrap -->                 
+                <!-- Featured Title -->                 
+                <!-- End Featured Title -->                 
                 <!-- Main Content -->                 
-                <div id="main-content" class="site-main clearfix"> 
-                    <div id="content-wrap"> 
-                        <div id="site-content" class="site-content clearfix"> 
-                            <div id="inner-content" class="inner-content-wrap"> 
-                                <div class="page-content"> 
-                                    <div id="contenedorPrincipal" class="newclass2">
-                                        <div class="button2">
-                                            <a onclick="cambiarContenido('opcion1');" class="themesflat-button bg-white">CALIDAD CONSISTENTE, PRODUCCIÓN SOSTENIBLE</a>
-                                            <a onclick="cambiarContenido('opcion2');" class="themesflat-button bg-white">PROGRAMA DE SUSTENTABILIDAD MÉTODO VERDE</a>
+                <!-- Main Content -->
+                <div id="main-content" class="site-main clearfix">
+                    <div id="content-wrap">
+                        <div id="site-content" class="site-content clearfix">
+                            <div id="inner-content" class="inner-content-wrap">
+                                <div class="page-content">
+                                    <!-- CONTACT -->
+                                    <div class="row-contact" style="background-image: url('assets/img/contacto.jpg');">
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="themesflat-spacer clearfix" data-desktop="61" data-mobile="60" data-smobile="60"></div>
+                                                </div>
+                                                <!-- /.col-md-12 -->
+                                            </div>
+                                            <!-- /.row -->
+                                            <div class="row">
+                                                <div class="col-md">
+                                                    <div class="themesflat-headings style-2 clearfix">
+                                                        <h2 class="heading">CONTACT US</h2>
+                                                        <div class="sep has-width w80 accent-bg clearfix"></div>                                                         
+                                                    </div>
+                                                    <div class="themesflat-spacer clearfix" data-desktop="36" data-mobile="35" data-smobile="35"></div>
+                                                    <div class="themesflat-contact-form style-2 clearfix">
+                                                        <form id="contactform" action="./contact/contact-process.php" method="post" accept-charset="utf-8" class="form-submit contact-form wpcf7-form">
+                                                            <span class="wpcf7-form-control-wrap your-name"> <input type="text" tabindex="1" id="name" name="name" value="" class="wpcf7-form-control" placeholder="Name*" required> </span>
+                                                            <span class="wpcf7-form-control-wrap your-phone"> <input type="text" tabindex="2" id="phone" name="phone" value="" class="wpcf7-form-control" placeholder="Phone"> </span> <span class="wpcf7-form-control-wrap your-email"> <input type="email" tabindex="3" id="email" name="email" value="" class="wpcf7-form-control" placeholder="E-mail*" required> </span>
+                                                            <span class="wpcf7-form-control-wrap your-subject"> <input type="text" tabindex="4" id="subject" name="subject" value="" class="wpcf7-form-control" placeholder="Subject"> </span>
+                                                            <span class="wpcf7-form-control-wrap your-message"> <textarea name="message" tabindex="5" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Message*" required></textarea> </span> <span class="wrap-submit"> <input type="submit" value="SEND US" class="submit wpcf7-form-control wpcf7-submit" id="submit" name="submit"> </span> 
+                                                        </form>
+                                                    </div>
+                                                    <!-- /.themesflat-contact-form -->
+                                                </div>
+                                                <!-- /.col-md-6 -->
+                                                <!-- /.col-md-6 -->
+                                            </div>
+                                            <!-- /.row -->
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="themesflat-spacer clearfix" data-desktop="78" data-mobile="60" data-smobile="60"></div>
+                                                </div>
+                                                <!-- /.col-md-12 -->
+                                            </div>
+                                            <!-- /.row -->
                                         </div>
-                                        <div id="logo" class="logn"></div>
-                                        <p id="titulo" class="title"></p>
-                                        <p id="contenido"> 
-        Mezcales Casa Armando representa la continuidad de un sueño de 5 generaciones, creado con valores familiares, una rica herencia cultural y gran amor por Oaxaca y por México. <br><br>
-        Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, y Asia. </p> 
-                                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;" alt="Imagen"> 
+                                        <!-- /.container -->
                                     </div>
-                                    <!-- SLIDER -->                                     
-                                    <!-- END SLIDER -->                                     
-                                    <!-- ICONBOX -->                                     
-                                    <!-- END ICONBOX -->                                     
-                                    <!-- ABOUT -->                                     
-                                    <!-- END ABOUT -->                                     
-                                    <!-- SERVICES -->                                     
-                                    <!-- END SERVICES -->                                     
-                                    <!-- PROJECT -->                                     
-                                    <!-- END PROJECT -->                                     
-                                    <!-- ICONBOX -->                                     
-                                    <!-- END ICONBOX -->                                     
-                                    <!-- TESTIMONIALS -->                                     
-                                    <!-- END TESTIMONIALS -->                                     
-                                    <!-- QUOTE -->                                     
-                                    <!-- END QUOTE -->                                     
-                                    <!-- TABS -->                                     
-                                    <!-- END TABS -->                                     
-                                    <!-- PARTNER -->                                     
-                                    <!-- END PARTNER -->                                     
+                                    <!-- END CONTACT -->
                                 </div>
-                                <!-- /.page-content -->                                 
+                                <!-- /.page-content -->
                             </div>
-                            <!-- /#inner-content -->                             
+                            <!-- /#inner-content -->
                         </div>
-                        <!-- /#site-content -->                         
+                        <!-- /#site-content -->
                     </div>
-                    <!-- /#content-wrap -->                     
+                    <!-- /#content-wrap -->
                 </div>
                 <!-- /#main-content -->                 
                 <!-- Footer -->                 
-                <!-- /#footer -->                 
-                <!-- Bottom -->                 
                 <footer class="bottom" id="bottom" class="clearfix has-spacer"> 
                     <div id="bottom-bar-inner" class="container"> 
                         <div class="bottom-bar-inner-wrap"> 
+                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright">
-                                    <span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>AVOID EXCESS&nbsp;&nbsp;&nbsp;ABUSE OF THIS PRODUCT IS HARMFUL TO YOUR HEALTH</span> 
                                 </div>                                 
                             </div>
-                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item"> <a href="index.html">INICIO</a> 
+                                    <li class="menu-item "> <a class="translatable" href="Ingles.html">HOME</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item "> <a class="translatable" href="about.html">ABOUT US</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
+                                    <li class="menu-item"> <a class="translatable" href="brands.html">OUR BRANDS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item"> <a class="translatable" href="responsibility.html">SOCIAL RESPONSIBILITY</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="contacto.html">CONTACTO</a> 
+                                    <li class="menu-item current-menu-item"> <a class="translatable" href="contact.html">CONTACT</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
@@ -184,8 +191,9 @@
         <script src="assets/js/owl.carousel2.thumbs.js"></script>         
         <script src="assets/js/jquery.cookie.js"></script>         
         <script src="assets/js/gmap3.min.js"></script>         
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIEU6OT3xqCksCetQeNLIPps6-AYrhq-s&region=GB"></script>         
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc&region=GB"></script>         
         <script src="assets/js/shortcodes.js"></script>         
+        <script src="assets/js/jquery-validate.js"></script>         
         <script src="assets/js/main.js"></script>         
         <!-- Revolution Slider -->         
         <script src="includes/rev-slider/js/jquery.themepunch.tools.min.js"></script>         
