--- a/casa2/contact.html
+++ b/casa2/contact.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -39,7 +40,8 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Languages:</span><span class="icons"><a href="index.html">SPA</a> <a class="current-menu-item" href="Ingles.html">ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Languages:</span>
+                                        <span class="icons"><a href="index.html">SPA</a> <a class="current-menu-item" href="Ingles.html">ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -110,11 +112,7 @@
                                                     </div>
                                                     <div class="themesflat-spacer clearfix" data-desktop="36" data-mobile="35" data-smobile="35"></div>
                                                     <div class="themesflat-contact-form style-2 clearfix">
-                                                        <form id="contactform" action="./contact/contact-process.php" method="post" accept-charset="utf-8" class="form-submit contact-form wpcf7-form">
-                                                            <span class="wpcf7-form-control-wrap your-name"> <input type="text" tabindex="1" id="name" name="name" value="" class="wpcf7-form-control" placeholder="Name*" required> </span>
-                                                            <span class="wpcf7-form-control-wrap your-phone"> <input type="text" tabindex="2" id="phone" name="phone" value="" class="wpcf7-form-control" placeholder="Phone"> </span> <span class="wpcf7-form-control-wrap your-email"> <input type="email" tabindex="3" id="email" name="email" value="" class="wpcf7-form-control" placeholder="E-mail*" required> </span>
-                                                            <span class="wpcf7-form-control-wrap your-subject"> <input type="text" tabindex="4" id="subject" name="subject" value="" class="wpcf7-form-control" placeholder="Subject"> </span>
-                                                            <span class="wpcf7-form-control-wrap your-message"> <textarea name="message" tabindex="5" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Message*" required></textarea> </span> <span class="wrap-submit"> <input type="submit" value="SEND US" class="submit wpcf7-form-control wpcf7-submit" id="submit" name="submit"> </span> 
+                                                        <form id="contactform" action="./contact/contact-process.php" method="post" accept-charset="utf-8" class="form-submit contact-form wpcf7-form"><span class="wpcf7-form-control-wrap your-name"> <input type="text" tabindex="1" id="name" name="name" value="" class="wpcf7-form-control" placeholder="Name*" required> </span><span class="wpcf7-form-control-wrap your-phone"> <input type="text" tabindex="2" id="phone" name="phone" value="" class="wpcf7-form-control" placeholder="Phone"> </span> <span class="wpcf7-form-control-wrap your-email"> <input type="email" tabindex="3" id="email" name="email" value="" class="wpcf7-form-control" placeholder="E-mail*" required> </span><span class="wpcf7-form-control-wrap your-subject"> <input type="text" tabindex="4" id="subject" name="subject" value="" class="wpcf7-form-control" placeholder="Subject"> </span><span class="wpcf7-form-control-wrap your-message"> <textarea name="message" tabindex="5" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Message*" required></textarea> </span> <span class="wrap-submit"> <input type="submit" value="SEND US" class="submit wpcf7-form-control wpcf7-submit" id="submit" name="submit"> </span> 
                                                         </form>
                                                     </div>
                                                     <!-- /.themesflat-contact-form -->
@@ -150,7 +148,8 @@
                         <div class="bottom-bar-inner-wrap"> 
                             <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>AVOID EXCESS&nbsp;&nbsp;&nbsp;ABUSE OF THIS PRODUCT IS HARMFUL TO YOUR HEALTH</span> 
+                                <div id="copyright">
+                                    <span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>AVOID EXCESS&nbsp;&nbsp;&nbsp;ABUSE OF THIS PRODUCT IS HARMFUL TO YOUR HEALTH</span> 
                                 </div>                                 
                             </div>
                             <div class="bottom-bar-menu"> 
