--- a/casa2/contacto.html
+++ b/casa2/contacto.html
@@ -103,7 +103,7 @@
                                                 <!-- /.col-md-12 -->
                                             </div>
                                             <!-- /.row -->
-                                            <div class="row" style="padding-left: 62px;">
+                                            <div class="row">
                                                 <div class="col-md">
                                                     <div class="themesflat-headings style-2 clearfix">
                                                         <h2 class="heading">CONTACTANOS</h2>
