--- a/_pgbackup/casa2/contacto_1696449004.html
+++ b/_pgbackup/casa2/contacto_1696449004.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -39,8 +40,7 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span>
-                                        <span class="icons"><a>SPA</a> <a>ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Idiomas:</span><span class="icons"><a>SPA</a> <a>ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -64,13 +64,13 @@
                                     <ul id="menu-primary-menu" class="menu"> 
                                         <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children "> <a href="page-about.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children "> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children "> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="page-contact.html">CONTACTO</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="contacto.html">CONTACTO</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -88,13 +88,13 @@
                 <!-- End Featured Title -->                 
                 <!-- Main Content -->                 
                 <!-- Main Content -->
-                <div id="main-content" class="site-main clearfix">
+                <div id="main-content" class="site-main clearfix" style="height: 100vh;">
                     <div id="content-wrap">
                         <div id="site-content" class="site-content clearfix">
                             <div id="inner-content" class="inner-content-wrap">
                                 <div class="page-content">
                                     <!-- CONTACT -->
-                                    <div class="row-contact" style="background-image: url('assets/img/contacto.jpg');">
+                                    <div class="row-contact" style="background-image: url('assets/img/contacto.jpg'); height: 100vh;">
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-md-12">
@@ -104,18 +104,14 @@
                                             </div>
                                             <!-- /.row -->
                                             <div class="row" style="padding-left: 62px;">
-                                                <div class="col-md-6">
+                                                <div class="col-md">
                                                     <div class="themesflat-headings style-2 clearfix">
-                                                        <h2 class="heading">CONTACT US</h2>
+                                                        <h2 class="heading">CONTACTANOS</h2>
                                                         <div class="sep has-width w80 accent-bg clearfix"></div>                                                         
                                                     </div>
                                                     <div class="themesflat-spacer clearfix" data-desktop="36" data-mobile="35" data-smobile="35"></div>
                                                     <div class="themesflat-contact-form style-2 clearfix">
-                                                        <form id="contactform" action="./contact/contact-process.php" method="post" accept-charset="utf-8" class="form-submit contact-form wpcf7-form">
-                                                            <span class="wpcf7-form-control-wrap your-name"> <input type="text" tabindex="1" id="name" name="name" value="" class="wpcf7-form-control" placeholder="Name*" required> </span>
-                                                            <span class="wpcf7-form-control-wrap your-phone"> <input type="text" tabindex="2" id="phone" name="phone" value="" class="wpcf7-form-control" placeholder="Phone"> </span> <span class="wpcf7-form-control-wrap your-email"> <input type="email" tabindex="3" id="email" name="email" value="" class="wpcf7-form-control" placeholder="Your Email*" required> </span>
-                                                            <span class="wpcf7-form-control-wrap your-subject"> <input type="text" tabindex="4" id="subject" name="subject" value="" class="wpcf7-form-control" placeholder="Subject"> </span>
-                                                            <span class="wpcf7-form-control-wrap your-message"> <textarea name="message" tabindex="5" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Message*" required></textarea> </span> <span class="wrap-submit"> <input type="submit" value="SEND US" class="submit wpcf7-form-control wpcf7-submit" id="submit" name="submit"> </span> 
+                                                        <form id="contactform" action="./contact/contact-process.php" method="post" accept-charset="utf-8" class="form-submit contact-form wpcf7-form"><span class="wpcf7-form-control-wrap your-name"> <input type="text" tabindex="1" id="name" name="name" value="" class="wpcf7-form-control" placeholder="Nombre*" required> </span><span class="wpcf7-form-control-wrap your-phone"> <input type="text" tabindex="2" id="phone" name="phone" value="" class="wpcf7-form-control" placeholder="Teléfono"> </span> <span class="wpcf7-form-control-wrap your-email"> <input type="email" tabindex="3" id="email" name="email" value="" class="wpcf7-form-control" placeholder="E-mail*" required> </span><span class="wpcf7-form-control-wrap your-subject"> <input type="text" tabindex="4" id="subject" name="subject" value="" class="wpcf7-form-control" placeholder="Asunto"> </span><span class="wpcf7-form-control-wrap your-message"> <textarea name="message" tabindex="5" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Mensaje*" required></textarea> </span> <span class="wrap-submit"> <input type="submit" value="SEND US" class="submit wpcf7-form-control wpcf7-submit" id="submit" name="submit"> </span> 
                                                         </form>
                                                     </div>
                                                     <!-- /.themesflat-contact-form -->
@@ -150,22 +146,21 @@
                     <div id="bottom-bar-inner" class="container"> 
                         <div class="bottom-bar-inner-wrap"> 
                             <div class="bottom-bar-content"> 
-                                <div id="copyright">
-                                    <span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright"><span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
                                 </div>                                 
                             </div>
                             <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item"> <a href="home.html">INICIO</a> 
+                                    <li class="menu-item"> <a href="index.html">INICIO</a> 
                                     </li>                                     
-                                    <li class="menu-item "> <a href="page-about.htnml">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                    <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a href="page-contact.html">CONTACTO</a> 
+                                    <li class="menu-item current-menu-item"> <a href="contacto.html">CONTACTO</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
